--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@js-draw/material-icons": "^1.30.0",
-    "js-draw": "^1.30.0"
+    "js-draw": "^1.30.0",
+    "vite": "^6.3.5"
   }
 }
