--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@js-draw/material-icons": "^1.30.0",
     "js-draw": "^1.30.0",
     "sass-embedded": "^1.89.0",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
 }
