feat(Projekt-x): Add gallery backend with express and sqlite3

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev:frontend": "vite",
+    "dev:backend": "node server/server.js",
     "build": "vite build"
   },
   "keywords": [],
@@ -17,5 +18,10 @@
     "sass-embedded": "^1.89.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
