docs(Project-x): Update README.md and minor changes in docs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jason Armstrong/Jaseen",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
